--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,36 @@
-click==7.1.2
+blinker==1.9.0
+Brotli==1.1.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
 colorama==0.4.6
-Flask==1.1.2
+ConfigArgParse==1.7
+coverage==7.6.8
+Flask==3.1.0
+Flask-Cors==5.0.0
+Flask-Login==0.6.3
+gevent==24.11.1
+geventhttpclient==2.3.3
+greenlet==3.1.1
+idna==3.10
 iniconfig==2.0.0
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
+locust==2.32.3
+MarkupSafe==3.0.2
+msgpack==1.1.0
 packaging==24.2
 pluggy==1.5.0
+psutil==6.1.0
+pycparser==2.22
 pytest==8.3.3
-Werkzeug==1.0.1
+pytest-cov==6.0.0
+pywin32==308
+pyzmq==26.2.0
+requests==2.32.3
+setuptools==75.6.0
+urllib3==2.2.3
+Werkzeug==3.1.3
+zope.event==5.0
+zope.interface==7.1.1
